objects/Site__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Online_Revenue__c</fullName>
        <label>Online Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Country__c</fullName>
        <label>Site Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan </fullName>
                </value>
                <value>
                    <fullName>Albania </fullName>
                </value>
                <value>
                    <fullName>Algeria </fullName>
                </value>
                <value>
                    <fullName>Andorra </fullName>
                </value>
                <value>
                    <fullName>Angola </fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda </fullName>
                </value>
                <value>
                    <fullName>Argentina </fullName>
                </value>
                <value>
                    <fullName>Armenia </fullName>
                </value>
                <value>
                    <fullName>Australia </fullName>
                </value>
                <value>
                    <fullName>Austria </fullName>
                </value>
                <value>
                    <fullName>Azerbaijan </fullName>
                </value>
                <value>
                    <fullName>Bahamas </fullName>
                </value>
                <value>
                    <fullName>Bahrain </fullName>
                </value>
                <value>
                    <fullName>Bangladesh </fullName>
                </value>
                <value>
                    <fullName>Barbados </fullName>
                </value>
                <value>
                    <fullName>Belarus </fullName>
                </value>
                <value>
                    <fullName>Belgium </fullName>
                </value>
                <value>
                    <fullName>Belize </fullName>
                </value>
                <value>
                    <fullName>Benin </fullName>
                </value>
                <value>
                    <fullName>Bhutan </fullName>
                </value>
                <value>
                    <fullName>Bolivia </fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina </fullName>
                </value>
                <value>
                    <fullName>Botswana </fullName>
                </value>
                <value>
                    <fullName>Brazil </fullName>
                </value>
                <value>
                    <fullName>Brunei </fullName>
                </value>
                <value>
                    <fullName>Bulgaria </fullName>
                </value>
                <value>
                    <fullName>Burkina Faso </fullName>
                </value>
                <value>
                    <fullName>Burma</fullName>
                </value>
                <value>
                    <fullName>Burundi </fullName>
                </value>
                <value>
                    <fullName>Cambodia </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Currency__c</fullName>
        <label>Site Currency</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>AFN</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>AMD</fullName>
                </value>
                <value>
                    <fullName>ANG</fullName>
                </value>
                <value>
                    <fullName>AOA</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>AWG</fullName>
                </value>
                <value>
                    <fullName>AZN</fullName>
                </value>
                <value>
                    <fullName>BAM</fullName>
                </value>
                <value>
                    <fullName>BBD</fullName>
                </value>
                <value>
                    <fullName>BDT</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>BHD</fullName>
                </value>
                <value>
                    <fullName>BIF</fullName>
                </value>
                <value>
                    <fullName>BMD</fullName>
                </value>
                <value>
                    <fullName>BND</fullName>
                </value>
                <value>
                    <fullName>BOB</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>BSD</fullName>
                </value>
                <value>
                    <fullName>BTN</fullName>
                </value>
                <value>
                    <fullName>BWP</fullName>
                </value>
                <value>
                    <fullName>BYR</fullName>
                </value>
                <value>
                    <fullName>BZD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CDF</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_ID__c</fullName>
        <label>Site ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Locale__c</fullName>
        <label>Site Locale</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CI</fullName>
                </value>
                <value>
                    <fullName>CL</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CZ</fullName>
                </value>
                <value>
                    <fullName>DA</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>EE</fullName>
                </value>
                <value>
                    <fullName>EG</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>GH</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>HK</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>